# mis_eventos

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8998808a320e_add_image_url_to_events.py  c0dd77b52621_initial_migration.py  edfd53f20f7f_add_session_registrations.py
backend/app/application/dto/: __init__.py  auth_responses.py  event_with_organizer.py  image_input.py
backend/app/application/ports/: cache_service.py  event_cache_policy.py  event_reader.py  event_repository.py  event_writer.py  password_hasher.py  registration_repository.py  session_registration_repository.py  session_repository.py  storage_service.py  user_repository.py
backend/app/application/serializers/: __init__.py  event_cache_serializer.py
backend/app/application/use_cases/: event_use_cases.py  registration_use_cases.py  session_registration_use_cases.py  session_use_cases.py  user_use_cases.py
backend/app/application/use_cases/event/: __init__.py  _validation.py  add_event_additional_image.py  cancel_event.py  create_event.py  delete_event.py  get_event.py  (+6 more)
backend/app/application/utils/: search.py
backend/app/domain/entities/: event.py  registration.py  session.py  session_registration.py  user.py
backend/app/domain/exceptions/: __init__.py
backend/app/infrastructure/: exceptions.py
backend/app/infrastructure/api/: main.py
backend/app/infrastructure/config/: database.py  logging.py  settings.py
backend/app/infrastructure/database/: seeding.py
backend/app/infrastructure/services/: cache_service.py  event_cache_policy.py  noop_cache_service.py  noop_storage_service.py  password_hasher.py  storage_service.py
backend/app/scripts/: seed_admin.py
backend/tests/: conftest.py
backend/tests/integration/api/: test_auth_api.py  test_event_api.py  test_registration_api.py  test_session_api.py  test_session_registration_api.py
backend/tests/unit/api/: test_error_handler.py  test_main.py
backend/tests/unit/application/: test_event_use_cases.py  test_registration_use_cases.py  test_session_registration_use_cases.py  test_session_use_cases.py  test_user_use_cases.py
backend/tests/unit/domain/: test_event.py  test_session.py  test_user.py
(+231 files in other folders)
